--- a/App.axaml
+++ b/App.axaml
@@ -14,6 +14,11 @@
         <StyleInclude Source="Styles/AppDefaultStyles.axaml" />
     </Application.Styles>
 
+    <Application.Styles>
+        <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml" />
+    </Application.Styles>
+
     <Application.Resources>
         <SolidColorBrush x:Key="PrimaryBackground">#1c1c1c</SolidColorBrush>
         <SolidColorBrush x:Key="SecondaryBackground">#1a1a1a</SolidColorBrush>
