--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -29,11 +29,12 @@
                         Margin="0,15,0,15"
                         HorizontalAlignment="Center">
 
-                <Label Content="Username" Foreground="{DynamicResource PrimaryBtnText}" />
+                <Label Content="Email" Foreground="{DynamicResource PrimaryBtnText}" />
 
-                <TextBox x:Name="Username"
+                <TextBox x:Name="Email"
                          Width="300"
-                         Height="40" />
+                         Height="40"
+                         Margin="0,0,0,25" />
 
                 <Label Content="Password" Foreground="{DynamicResource PrimaryBtnText}" />
 
@@ -65,6 +66,7 @@
                 </Button>
 
             </StackPanel>
+
         </Grid>
 
     </Border>
