--- a/Views/RegisterView.axaml
+++ b/Views/RegisterView.axaml
@@ -9,5 +9,47 @@
              x:DataType="vm:RegisterViewModel"
              mc:Ignorable="d">
 
-    <Label Content="Register" />
+    <Border Padding="20" Background="{DynamicResource PrimaryBackground}">
+        <Grid ColumnDefinitions="*,500,*" RowDefinitions="*,*,*">
+            <StackPanel Grid.Row="0"
+                        Grid.Column="1"
+                        HorizontalAlignment="Center">
+                <Label Content="First let's fill in some basic information"
+                       FontSize="18"
+                       Foreground="{DynamicResource PrimaryBtnText}" />
+            </StackPanel>
+
+
+            <StackPanel Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="0,15,0,15"
+                        HorizontalAlignment="Center">
+
+                <Label Content="Email" Foreground="{DynamicResource PrimaryBtnText}" />
+                <TextBox x:Name="Email"
+                         Width="300"
+                         Height="40"
+                         Margin="0,0,0,25" />
+
+                <Label Content="Password" Foreground="{DynamicResource PrimaryBtnText}" />
+                <TextBox x:Name="Password"
+                         Width="300"
+                         Height="40" />
+
+
+                <Button Width="120"
+                        Margin="15,40,0,0"
+                        HorizontalAlignment="Center"
+                        Foreground="{DynamicResource PrimaryBtnText}">
+                    <StackPanel Orientation="Horizontal">
+                        <Label Classes="icon" Content="&#xE4D0;" />
+                        <Label Content="Register" />
+                    </StackPanel>
+                </Button>
+
+            </StackPanel>
+
+        </Grid>
+
+    </Border>
 </UserControl>
